tests/data/pl0/valid/compat_store_trace_output.pl0
var x;
begin
  x := 7
end.
