tests/data/pl0/invalid/limit_number_too_long.pl0
const x = 123456789012345;
begin
  ! x
end.
